# ai-chat-bot

ai-chat-bot/: .env  README.md  env.d.ts  package.json  pnpm-lock.yaml  vite.config.ts
ai-chat-bot/src/: App.vue  main.ts
ai-chat-bot/src/api/chat/: chat.ts
ai-chat-bot/src/api/rag/: rag.ts
ai-chat-bot/src/api/testDIR/: test.ts
ai-chat-bot/src/components/: TheWelcome.vue  Toast.vue
ai-chat-bot/src/hooks/: useFileUpload.ts  useSendMessageStream.ts
ai-chat-bot/src/router/: index.ts
ai-chat-bot/src/stores/: message.ts  user.ts
ai-chat-bot/src/utils/: localstorage.ts  reuqest.ts
ai-chat-bot/src/views/: ChatView.vue  HomeView.vue  LoginView.vue  TestView.vue
backend/: .env.example  .gitignore  check_tables.py  main.py  pyproject.toml  test_rag.py
backend/alembic/: env.py
backend/alembic/versions/: 14f31d868bd7_add_document_table.py  184ea83058a6_add_chat_table.py  46e73d5cd8b1_add_rag_chat_message_table.py  57905f44788e_add_emailcode.py  d661c1632eb8_init.py  fcdfb4c65544_change_is_deleted_to_is_rag_session.py
backend/app/: dependencies.py  exceptions.py  main.py  settings.py
backend/app/api/v1/: auth.py  chat.py  item.py  rag.py  user.py
backend/app/core/: auth.py  llm.py  mail.py  token_blacklist.py
backend/app/models/: __init__.py  article.py  chat.py  user.py
backend/app/repository/: chat_repo.py  document_repo.py  user_repo.py
backend/app/schemas/: auth.py  chat.py  response.py  user.py  userSchamaOut.py
backend/app/services/: auth_service.py  rag_service.py  user_service.py
backend/app/utils/: response.py
(+18 files in other folders)
