[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "alembic>=1.18.4",
    "cryptography>=46.0.7",
    "fastapi>=0.135.3",
    "fastapi-mail>=1.6.2",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]
